--- a/06_DOM/three.html
+++ b/06_DOM/three.html
@@ -17,7 +17,7 @@
     div.style.backgroundColor = "green"
     div.style.padding = "12px"
     // div.innerText = "Chai Aur Code"
-    const addText = document.createTextNode("Chai aur Node")
+    const addText = document.createTextNode("Chai aur Code")
     div.appendChild(addText)
 
     document.body.appendChild(div)
